aligned and centered prompts. fixed iterator logic in prac and exp

--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,12 @@ body {
   margin: 30px auto;
   width: 300px;
 }
+
+
+/* columns  */
+/* .column {
+  text-align: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+} */
